# test-grpc-repo

./: README.md  generate_python.sh  pyproject.toml
grpc_rep_python/scrapper/: __init__.py  scrapper_pb2.pyi
proto/: scrapper.proto
python/: scrapper_pb2.py  scrapper_pb2_grpc.py
